# Savoria

./: .gitignore  README.md  Spacefile  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  vercel.json  vitest.config.js
.something/: prd.md  scenarios.json
backend/: __init__.py  main.py  requirements.txt
backend/tests/: __init__.py  test_early_termination.py  test_parallel_screen_endpoint.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
src/: App.vue
src/assets/: main.css
src/components/: CategorySection.vue  CoverItem.vue  SavorSection.vue  YearNavigationButtons.vue  YearNavigationHeader.vue  YearSelector.vue
src/utils/: yearCache.js  yearUrl.js
tests/e2e/: accessibility-focus-indicators.spec.js  accessibility-focus.spec.js  api-integration.spec.js  browser-compatibility.spec.js  category-section-headers.spec.js  cover-aspect-ratio.spec.js  empty-state.spec.js  error-handling.spec.js  grid-layout.spec.js  hover-effects.spec.js  keyboard-navigation.spec.js  lazy-loading.spec.js  performance-page-load.spec.js  responsive-grid.spec.js  text-color-visual.spec.js  url-state-persistence.spec.js  year-navigation-buttons.spec.js  year-navigation-integrated-header.spec.js  year-transition-animation.spec.js  year-transition.spec.js  yearSelector.spec.js
tests/unit/: CategorySection.spec.js  YearNavigationButtons.test.js  YearNavigationHeader.test.js  YearSelector.test.js  accessibility-aria.spec.js  api-integration.spec.js  category-section-headers.spec.js  coverItem.test.js  error-handling.spec.js  (+11 more)
(+2 files in other folders)
